some fixes ... stuck with UI though

--- a/re/instantre.css
+++ b/re/instantre.css
@@ -21,12 +21,19 @@ body {
 
 .head, .content {
     width : 100%;
-    background:wheat;
+    background:grey;
     position : absolute;
 }
 
 .head {
     height : 60px;
+    line-height: 60px;
+}
+
+.head-matches-title {
+    text-indent : 20px;
+    color:white;
+    font-size:18px;
 }
 
 .content-wrapper {
@@ -36,8 +43,14 @@ body {
 }
 
 .head .head-logo {
-    float : left;
-    width:60px;
+    float: left;
+    font-size:32px;
+    font-weight:bold;
+    color:white;
+    text-shadow : 0 -1px 0 black;
+    width: 60px;
+    text-align: center;
+    height: 60px;
 }
 
 .head .head-button {
@@ -46,11 +59,29 @@ body {
 }
 .content {
     top:60px;
-    background:red;
+    background:#353637;
     bottom : 0;
 }
 
 #text-editor {
+}
+
+#matches-list {
+    color : white;
+    line-height: 20px;
+    text-indent: 20px;
+    overflow: auto;
+}
+
+#matches-list ul {
+    list-style: none;
+    padding : 0;
+    margin:0;
+}
+
+#matches-list li {
+    padding:10px;
+    border-bottom: 1px Solid grey;
 }
 
 #regexp-input {
@@ -65,4 +96,14 @@ body {
 	border: none;
 	font-size: 28px;
 	outline:none;
+    -webkit-transition : box-shadow 0.3s;
+    -moz-transition : box-shadow 0.3s;
+}
+
+#regexp-input:focus {
+    box-shadow : inset 0 0px 2px 2px grey;
+}
+
+#regexp-input.input-error {
+    box-shadow : inset 0 0px 2px 2px rgb(218, 0, 0);
 }
